# altre

./: .gitignore  AGENTS.md  AI_DEBUG_GUIDE.md  ALISP_MODULE_DRAFT.md  A_LISP_FIRST_DRAFT.md  CHANGELOG.md  COMPLETION_REPORT.md  COPY.md  Cargo.toml  DEBUG.md  INSTALL.md  QA.md  README.md  RELEASE_NOTES.md  SESSION_RESUME.md  TASK_MANAGEMENT.md  build-run-tui.sh  build-run.sh  build.rs  error.txt  log-status.md  log.md  package-lock.json  performance_report.md
alisp/: init.al
altre-core/: Cargo.toml
altre-core/benches/: gap_buffer.rs
altre-core/src/: lib.rs  logging.rs  main.rs
altre-core/src/alisp/: evaluator.rs  primitives.rs  symbol.rs
altre-core/src/alisp/runtime/: mod.rs
altre-core/src/buffer/: cursor.rs  editor.rs  gap_buffer.rs
altre-core/src/core/: backend.rs  mod.rs
altre-core/src/editor/: change_notifier.rs  edit_operations.rs  input_buffer.rs
altre-core/src/file/: mod.rs  operations.rs
altre-core/src/minibuffer/: commands.rs  mod.rs  system.rs  ui.rs
altre-core/src/performance/: mod.rs  monitor.rs  optimization.rs  profiling.rs
altre-core/src/search/: types.rs
altre-core/src/ui/: gui_theme.rs  mod.rs  renderer.rs  text_area.rs  viewport.rs
altre-core/tests/: alisp_keybinding_tests.rs  buffer_management_tests.rs  gap_buffer_prop.rs  global_cancel_tests.rs  integration_tests.rs  mark_region_tests.rs  search_replace_workflow.rs
altre-core/tests/minibuffer/: error_handling_tests.rs  history_tests.rs  unit_tests.rs
altre-tauri/: Cargo.toml
altre-tauri/src/: controller.rs  keymap.rs  lib.rs  logging.rs  main.rs  options.rs  snapshot.rs
app/: .gitkeep  Cargo.toml  clippy.toml  rustfmt.toml
app/benches/: navigation_bench.rs  performance.rs
app/src/: app.rs  error.rs  lib.rs  main.rs
app/src/alisp/: evaluator.rs  mod.rs  primitives.rs
app/src/alisp/integration/: minibuffer.rs  mod.rs
app/src/alisp/reader/: mod.rs
app/src/alisp/runtime/: mod.rs
app/src/buffer/: editor.rs  gap_buffer.rs  mod.rs  navigation.rs
app/src/editor/: edit_operations.rs  input_buffer.rs  mod.rs  text_editor.rs
app/src/editor/history/: mod.rs
app/src/file/: completion.rs  io.rs  metadata.rs  mod.rs  operations.rs  path.rs
app/src/input/: commands.rs  event_handler.rs  keybinding.rs  mod.rs
app/src/minibuffer/: commands.rs  completion.rs  history.rs  mod.rs  system.rs  ui.rs
app/src/performance/: mod.rs  monitor.rs  profiling.rs
app/src/search/: mod.rs  regex.rs  types.rs
app/src/ui/: layout.rs  minibuffer.rs  mod.rs  renderer.rs  text_area.rs  theme.rs  viewport.rs  window_manager.rs
app/tests/: alisp_interpreter.rs  extended_file_operations_tests.rs  global_cancel_tests.rs  integration_tests.rs  keybinding_integration_tests.rs  navigation_performance.rs  window_management_tests.rs
app/tests/minibuffer/: history_tests.rs  mod.rs  unit_tests.rs
benches/: navigation_bench.rs  performance.rs
docs/: .gitkeep  api_reference.md  architecture.md  contributing.md
docs/adr/: 0001-use-rust-and-ratatui.md  0002-emacs-keybinding-and-minibuffer.md  0003-emacs-operations-roadmap.md  0004-alisp-first-draft.md  0005-gui-framework-selection.md  0006-gui-integration-strategy.md  0007-tauri-gui-adoption.md
docs/adr-qa/: alisp_QA.md  design_QA.md  init_QA.md  undo_redo_QA.md
docs/architecture/: module_dependencies.md  mvp_architecture.md
docs/design/: alisp_language_spec.md  alisp_runtime_architecture.md  basic_editing.md  error_handling.md  file_operations.md  gap_buffer.md  gap_buffer_property_tests.md  gui_tui_mode_switch.md  gui_tui_regression_testing.md  ime_verification_strategy.md  incremental_search_architecture.md  keybinding.md  keybinding_config.md  minibuffer.md  minibuffer_tests.md  navigation.md  navigation_performance_tests.md  performance_tests_spec.md  position_calculation_algorithms.md  search_data_structures.md  search_replace_spec.md  search_ui_ux.md  slint_dependency_minimum.md  slint_gui_frontend.md  tauri_gui_architecture.md  tauri_gui_minimal_flow.md  tauri_gui_validation.md  tui_layout.md  ui_backend_frontend_separation.md  undo_redo.md  utf8_safety_spec.md
docs/init/: QA.md  alisp_QA.md  design_QA.md
frontend/: README.md
frontend/react/: index.html  package-lock.json  package.json  vite.config.ts
logo/: README.md
manuals/: .gitkeep  alisp_v0_manual.md  faq.md  keybinding_reference.md  mvp_validation_checklist.md  troubleshooting.md  user_guide.md
nix/: shell.nix
scripts/: generate_docs.sh
src/: app.rs  error.rs  lib.rs  logging.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/alisp/: ast.rs  error.rs  evaluator.rs  mod.rs  primitives.rs
src/buffer/: cursor.rs  editor.rs  mod.rs  navigation.rs  operations.rs
temp/: .gitkeep
test/: .gitkeep
tests/: alisp_interpreter.rs  buffer_management_tests.rs  extended_file_operations_tests.rs  gap_buffer_prop.rs  integration_tests.rs  keybinding_integration_tests.rs  mark_region_tests.rs  navigation_performance.rs  search_replace_workflow.rs  ui_minibuffer_render.rs  window_management_tests.rs
(+203 files in other folders)
