[package]
name = "altre"
version = "0.1.0"
edition = "2021"
description = "Modern Emacs-inspired text editor built with Rust"
authors = ["altre development team"]
repository = "https://github.com/yuwki0131/altre"
readme = "README.md"
license = ""
keywords = ["text-editor", "emacs", "tui", "terminal"]
categories = ["command-line-utilities", "text-editors"]

[dependencies]
# TUI framework
ratatui = "0.29"
crossterm = "0.28"
regex = "1.11"
slint = { version = "1.5", optional = true }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# File path handling and completion
shellexpand = "3.1"
dirs = "5.0"

# Logging (for development)
log = "0.4"

# Unicode width calculation
unicode-width = "0.1"

# Testing framework
[dev-dependencies]
proptest = "1.4"
tempfile = "3.8"
criterion = { version = "0.4", features = ["html_reports"] }

# Feature flags for future extensions
[features]
default = []
alisp = []  # Future Lisp integration
gui = ["slint"]    # Future GUI support (Slint)

[[bench]]
name = "navigation_bench"
harness = false

[[bench]]
name = "performance"
harness = false
