[workspace]
members = [
    "altre-core",
    "altre-tauri",
    "src-tauri",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
authors = ["altre development team"]
description = "Modern Emacs-inspired text editor built with Rust"
repository = "https://github.com/yuwki0131/altre"
readme = "README.md"
license = ""

[workspace.dependencies]
anyhow = "1.0"
crossterm = "0.28"
dirs = "5.0"
log = "0.4"
proptest = "1.4"
ratatui = "0.29"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shellexpand = "3.1"
thiserror = "1.0"
unicode-width = "0.1"
tempfile = "3.8"
criterion = { version = "0.4", features = ["html_reports"] }

[workspace.metadata]
project-name = "altre"
