[package]
name = "altre"
version = "0.1.0"
edition = "2021"
description = "Modern Emacs-inspired text editor built with Rust"
authors = ["altre development team"]
repository = "https://github.com/yuwki0131/altre"
readme = "../README.md"
license = ""
keywords = ["text-editor", "emacs", "tui", "terminal"]
categories = ["command-line-utilities", "text-editors"]

[dependencies]
# TUI framework
ratatui = { workspace = true }
crossterm = { workspace = true }
regex = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# File path handling and completion
shellexpand = { workspace = true }
dirs = { workspace = true }

# Logging (for development)
log = { workspace = true }

# Unicode width calculation
unicode-width = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Testing framework
[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }
criterion = { workspace = true }

# Feature flags for future extensions
[features]
default = []
alisp = []  # Future Lisp integration

[[bench]]
name = "navigation_bench"
harness = false

[[bench]]
name = "performance"
harness = false
