[package]
name = "altre-tauri"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
altre = { path = "../altre-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
dirs = { workspace = true }
crossterm = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
