[package]
name = "altre-tauri-app"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
altre-tauri = { path = "../altre-tauri" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tauri = { version = "2.0", features = ["dialog-open", "shell-open"] }

[build-dependencies]
tauri-build = "2.0"

[package.metadata.release]
sign-commit = false
sign-tag = false
